--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Working methods PATCH, DELETE, PUT
 spring.mvc.hiddenmethod.filter.enabled=true
+
+server.error.include-stacktrace=always
