--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/isdb_coursework
 spring.datasource.username=postgres
 spring.datasource.password=qwerty123
 
-# Hibernate
+# JPA
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
